--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
