--- a/package.json
+++ b/package.json
@@ -60,10 +60,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.4",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.13.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.5.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
