--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-resizable-panels": "^2.1.4",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.13.0",
+    "stripe": "^17.3.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
