--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-three/drei": "^9.116.3",
+    "@react-three/fiber": "^8.17.10",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -66,6 +68,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
     "tsparticles": "^3.5.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
