Agent query: Please verify: 1. Does the landing page load with all sections (Hero, Features, Pricing)? 2. Does the generator page form work and allow input? 3. Is the content preview working after form submission? 4. Are all animations and UI elements displaying correctly?

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@react-three/drei": "^9.116.3",
     "@react-three/fiber": "^8.17.10",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -52,8 +54,10 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
