--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.4",
     "react-tsparticles": "^2.12.2",
