--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.16",
+    "@types/three": "^0.170.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -77,6 +82,7 @@
     "tsparticles": "^3.5.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
@@ -89,7 +95,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.27.1",
     "esbuild": "^0.24.0",
@@ -97,6 +103,6 @@
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   }
 }
