--- a/package.json
+++ b/package.json
@@ -43,15 +43,20 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
+    "@tanstack/react-query": "^5.60.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.11.10",
     "@types/three": "^0.170.0",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.3",
@@ -90,10 +95,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
-    "@types/passport": "^1.0.16",
+    "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -102,9 +107,9 @@
     "drizzle-kit": "^0.27.2",
     "esbuild": "^0.24.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
-    "typescript": "5.6.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.11"
   }
 }
